# pp-fingal-group24-cuda

./: CMakeLists.txt  README.md
data/: mnist_2000_200.txt
data/PRSA/: PRSA_100_20.txt  PRSA_2000_200.txt  PRSA_500_100.txt
data/pp-final-trash/GP_CUDA/: CMakeLists_Qqqq.txt  cuda_add_vectors.hpp  my_cuda_file.cu
data/wine/: redwine_1300_299.txt
include/GP/: CMakeLists.txt  utils.hpp
include/GP/gp/: model.hpp
include/GP/linalg/: linalg.hpp
include/GP/matrix/: matrix.hpp
include/cuda/: CMakeLists.txt  cuda_utils.cu  cuda_utils.hpp  gp_model_cuda.hpp
script/: generate_dataset.py
src/: main.cpp
